--- a/gui/package.json
+++ b/gui/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
@@ -32,8 +33,8 @@
     "@tauri-apps/cli": "^2",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^4.6.0",
-    "typescript": "^5.8.3",
+    "@vitejs/plugin-react": "^4.7.0",
+    "typescript": "^5.9.3",
     "vite": "^7.0.4"
   }
 }
